petit correction